--- a/docker_current.yml
+++ b/docker_current.yml
@@ -113,8 +113,11 @@ services:
     ports:
       - 8200:8200
     environment:
+      VAULT_DEV_ROOT_TOKEN_ID: "myroot"
+      VAULT_DEV_LISTEN_ADDRESS: "0.0.0.0:8200"
+      VAULT_TOKEN: "myroot"
       VAULT_ADDR: "http://0.0.0.0:8200"
-      VAULT_DEV_ROOT_TOKEN_ID: "vault-plaintext-root-token"
+
     cap_add:
       - IPC_LOCK
     networks:
